tests/errors/Channel.recv_expects_0_arguments.b
fn bad_recv() {
    ch := Channel<int>();
    ch.recv(1);
}

fn main() {
}
